global-auth-cockroachdb/k8s/cfg/auth-app/auth-app.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-dply
  labels:
    app: auth-app
spec:
  replicas: 20
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: global-auth
          image: global-auth-cockroachdb-cluster-registry.local:5000/global-auth-cockroachdb:latest
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: "1"
              memory: "1G"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-app-svc
  labels:
    app: auth-app-svc
spec:
  type: LoadBalancer
  selector:
    app: auth-app
  ports:
    - port: 8090
      targetPort: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-app-svc
                port:
                  number: 8090
